fix: rte/bubble-menu z-index

--- a/src/components/RichTextEditor/components/BubbleMenu/index.css
+++ b/src/components/RichTextEditor/components/BubbleMenu/index.css
@@ -8,7 +8,7 @@
   align-items: center;
   gap: 5px 5px;
   /* opacity: 0.7; */
-  z-index: 3;
+  /* z-index: use prop for BubbleMenu component */
 }
 
 /* .rte__bubble-menu:hover {
